--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "author": "GitHub",
   "license": "MIT",
   "dependencies": {
-    "@actions/cache": "^3.0.4",
+    "@actions/cache": "npm:github-actions.cache-buildjet@^0.1.2",
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.0.4",
     "@actions/glob": "^0.4.0",
@@ -57,5 +57,4 @@
     "url": "https://github.com/actions/setup-java/issues"
   },
   "homepage": "https://github.com/actions/setup-java#readme"
-  
 }
